@@ -267,7 +267,8 @@ CHOST="i686-pc-linux-gnu"
 # CCACHE_SIZE sets the space use limitations for ccache. The default size is
 #     2G, and will be set if not defined otherwise and ccache is in features. 
 #     Portage will set the default ccache dir if it is not present in the
-#     user's environment: ${PORTAGE_TMPDIR}/ccache (/var/tmp/ccache).
+#     user's environment, for userpriv it sets: ${PORTAGE_TMPDIR}/ccache
+#     (/var/tmp/ccache), and for regular use the default is /root/.ccache.
 #     Sizes are specified with 'G' 'M' or 'K'.
 #     '4G' for 4 gigabytes, '4096M' for 4 gigabytes, etc... Default is 2G
 #CCACHE_SIZE="2G"
